fixed main page css issues caused by overlapping class names in cards

--- a/src/components/MiniProjectCard/MiniProjectCard.css
+++ b/src/components/MiniProjectCard/MiniProjectCard.css
@@ -7,9 +7,10 @@
     background: rgba(247, 246, 246, 0.5);
     backdrop-filter: blur(10px);
     border-radius: 16px;
+    width: fit-content;
 }
 
-.thumbnail {
+.mini-thumbnail {
     width: 300px;
     height: 250px;
     object-fit: cover;
